syntax = "proto3";

package msg;
option java_package = "org.xgame.bizserver.msg";
option csharp_namespace = "Org.XGame.Comm.Msg";

// 
// 消息代号
enum CommMsgCodeDef {
    _Dummy = 0;
    _PingCmd = 1;
    _PingResult = 2;
    _CheckInTicketCmd = 11;
    _CheckInTicketResult = 12;
    _ReconnectCmd = 13;
    _ReconnectResult = 14;
    _SuccessHintResult = 15;
    _ErrorHintResult = 16;
    _KickOutUserResult = 44;
}

//
// Ping 命令
///////////////////////////////////////////////////////////////////////
// 指令
message PingCmd {
    sint32 pingId = 1;
}

// 结果
message PingResult {
    sint32 pingId = 1;
}

//
// 检票
///////////////////////////////////////////////////////////////////////
// 指令
message CheckInTicketCmd {
    // 用户 Id
    sint64 userId = 1;
    // 票据, 该票据是在登录服务器上生成的
    string ticket = 2;
}

// 结果
message CheckInTicketResult {
    // 用户 Id
    sint64 userId = 1;
    // 成功标志
    bool succezz = 2;
}

// 
// 断线重连
///////////////////////////////////////////////////////////////////////
// 指令
message ReconnectCmd {
    // 用户 Id
    sint64 userId = 1;
    // Ukey 字符串
    string ukeyStr = 2;
    // Ukey 过期时间
    sint64 ukeyExpireAt = 3;
}

// 结果
message ReconnectResult {
    // 用户 Id
    sint64 userId = 1;
    // Ukey 字符串
    string ukeyStr = 2;
    // Ukey 过期时间
    sint64 ukeyExpireAt = 3;
    // 是否成功
    bool ok = 4;
}

//
// 成功提示
///////////////////////////////////////////////////////////////////////
// 结果
message SuccessHintResult {
    // 成功信息
    string successInfo = 1;
}

//
// 错误提示
///////////////////////////////////////////////////////////////////////
// 结果
message ErrorHintResult {
    // 错误编号
    sint32 errorCode = 1;
    // 错误消息
    string errorMsg = 2;
}

//
// 踢出用户
///////////////////////////////////////////////////////////////////////
// 结果
message KickOutUserResult {
    // 理由
    string reason = 1;
}
